# obd2_scanner_console

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  DEPLOY.md  INSTALL.md  Makefile  README.md  TODO.md
.opencode/skills/obd2-console/: SKILL.md
bash/: clear_rfcomm.sh
include/: console_app.hpp  elm327.hpp  logger.hpp
scripts_tools/: build.sh  clear_rfcomm.sh  install_dependencies.sh
src/: console_app.cpp  elm327.cpp  logger.cpp  main.cpp
